# OpenRCT2-solana

./: .gitignore  Anchor.toml  CHAIN.md  CMakeLists.txt  CODING_AGENT.md  FEATURES.md  README.md  SETUP.md  package.json  plan.json
.claude/: settings.local.json
ai-agent-workspace/: IN_GAME_AGENT.md  auto_prompts.txt
ai-agent-workspace/.claude/: settings.json.example
chain-sidecar/: package-lock.json  package.json
chain-sidecar/src/: check-er-failures.ts  create-tycoon-metadata.ts  e2e.ts  main.ts  stake-demo.ts
chain-sidecar/src/outbox/: reader.ts  types.ts
chain-sidecar/src/solana/: accounts.ts  badges.ts  clients.ts  delegate.ts  lottery.ts  score.ts  (+2 more)
cmake/: MacFixupBundle.cmake
distribution/: openrct2.d.ts
game/: AGENTS.md  RCTCTL.md  SETUP.md  readme.md
game/scripts/: agent_bootstrap.sh  agent_session_wrapper.sh  agent_turn_complete.sh  markdown_to_html.py  session_to_markdown.py
metadata/: tycoon.json
programs/solana-city/: Cargo.toml
programs/solana-city/src/: errors.rs  lib.rs  state.rs
programs/solana-city/src/instructions/: badges.rs  city.rs  crank.rs  guest.rs  leaderboard.rs  mod.rs  staking.rs  token.rs  venue.rs  vrf.rs
rctctl/: CMakeLists.txt
resources/g2/: sprites.json
scripts/: agent_glyph_audit.py  agent_loop.py  build  generate_agent_toolbar.py
src/openrct2/: Diagnostic.cpp  Diagnostic.h  OpenRCT2.cpp  OpenRCT2.h
src/openrct2-ui/: UiContext.cpp  libopenrct2ui.vcxproj
test/scenarios/: README.md  run_scenarios.py
test/tests/: CMakeLists.txt  RctctlRendererTests.cpp
tests/: solana-city-er.ts  solana-city.ts
(+150 files in other folders)
