[package]
name = "solana-city"
version = "0.1.0"
description = "Created with Anchor"
edition = "2021"

[lib]
crate-type = ["cdylib", "lib"]
name = "solana_city"

[features]
default = []
cpi = ["no-entrypoint"]
no-entrypoint = []
no-idl = []
no-log-ix-name = []
idl-build = ["anchor-lang/idl-build"]
anchor-debug = []
custom-heap = []
custom-panic = []


[dependencies]
anchor-lang = { version = "0.32.1", features = ["init-if-needed"] }
ephemeral-rollups-sdk = { version = "0.11.1", features = ["anchor", "disable-realloc"] }
ephemeral-vrf-sdk = { version = "0.2.3", features = ["anchor"] }
magicblock-magic-program-api = { version = "0.8.5", default-features = false }
bincode = "^1.3"
blake3 = "=1.5.5"


[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ['cfg(target_os, values("solana"))'] }
